Testing a more optimized config